Added demographics for U.S.

--- a/Build_economy2014.ipynb
+++ b/Build_economy2014.ipynb
@@ -1315,7 +1315,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1330,7 +1329,6 @@
        "      <td>270867</td>\n",
        "      <td>36307</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>24.0</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1347,8 +1345,8 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307422              270867                 36307  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          24.0                7.0  "
+       "   Unemployment rate  \n",
+       "0                7.0  "
       ]
      },
      "execution_count": 28,
@@ -1357,12 +1355,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2014[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2014[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2014[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2014[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2014[\"Unemployed civilians\"].astype(\n",
@@ -1416,7 +1408,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1432,7 +1423,6 @@
        "      <td>270867</td>\n",
        "      <td>36307</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>24.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>61.0</td>\n",
        "    </tr>\n",
@@ -1450,8 +1440,8 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307422              270867                 36307  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          24.0                7.0                      61.0  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                7.0                      61.0  "
       ]
      },
      "execution_count": 30,
