--- a/Build_economy2016_MD.ipynb
+++ b/Build_economy2016_MD.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "## Build an equitable economy: INCOME\n",
-    "### Baltimore City median income, Black median income, Black-white income gap\n",
+    "### MD median income, Black median income, Black-white income gap\n",
     "## 2016"
    ]
   },
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2016 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2016 Census Data (ACS-1 year) for Selected Variables - MARYLAND\n"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -198,10 +197,9 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data = censusdata.download('acs1', 2016,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
-    "                                                )]),\n",
+    "                                               )]),\n",
     "                                        [\"B19001_001E\",\"B01003_001E\",\n",
     "                                         \"B19013_001E\",\n",
     "                                         \"B02001_002E\", \"B02001_003E\",\n",
@@ -413,7 +411,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Baltimore, 2016</th>\n",
+       "      <th>Maryland, 2016</th>\n",
        "      <td>2194657</td>\n",
        "      <td>6016447</td>\n",
        "      <td>78945</td>\n",
@@ -427,17 +425,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Total households  Population  Median household income  \\\n",
-       "Baltimore, 2016           2194657     6016447                    78945   \n",
+       "                Total households  Population  Median household income  \\\n",
+       "Maryland, 2016           2194657     6016447                    78945   \n",
        "\n",
-       "                 Pop. white  Pop. Black  \\\n",
-       "Baltimore, 2016     3397255     1793593   \n",
+       "                Pop. white  Pop. Black  \\\n",
+       "Maryland, 2016     3397255     1793593   \n",
        "\n",
-       "                 Median HH income White Alone Householder  \\\n",
-       "Baltimore, 2016                                     87776   \n",
+       "                Median HH income White Alone Householder  \\\n",
+       "Maryland, 2016                                     87776   \n",
        "\n",
-       "                 Median HH income Black or African American Alone Householder  \n",
-       "Baltimore, 2016                                                         62919  "
+       "                Median HH income Black or African American Alone Householder  \n",
+       "Maryland, 2016                                                         62919  "
       ]
      },
      "execution_count": 15,
@@ -490,7 +488,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>2194657</td>\n",
        "      <td>6016447</td>\n",
        "      <td>78945</td>\n",
@@ -504,8 +502,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             index  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016           2194657     6016447                    78945   \n",
+       "            index  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016           2194657     6016447                    78945   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0     3397255     1793593                                     87776   \n",
@@ -564,7 +562,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>2194657</td>\n",
        "      <td>6016447</td>\n",
        "      <td>78945</td>\n",
@@ -578,8 +576,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016           2194657     6016447                    78945   \n",
+       "             Year  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016           2194657     6016447                    78945   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0     3397255     1793593                                     87776   \n",
@@ -638,7 +636,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>2194657</td>\n",
        "      <td>6016447</td>\n",
        "      <td>78945</td>\n",
@@ -652,8 +650,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016           2194657     6016447                    78945   \n",
+       "             Year  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016           2194657     6016447                    78945   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0     3397255     1793593                                     87776   \n",
@@ -721,7 +719,7 @@
        "      <td>1793593</td>\n",
        "      <td>87776</td>\n",
        "      <td>62919</td>\n",
-       "      <td>Baltimore</td>\n",
+       "      <td>Maryland</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -734,8 +732,8 @@
        "   Pop. Black  Median HH income White Alone Householder  \\\n",
        "0     1793593                                     87776   \n",
        "\n",
-       "   Median HH income Black or African American Alone Householder   Location  \n",
-       "0                                                         62919  Baltimore  "
+       "   Median HH income Black or African American Alone Householder  Location  \n",
+       "0                                                         62919  Maryland  "
       ]
      },
      "execution_count": 19,
@@ -756,16 +754,8 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2016.to_csv(\"balt_income_2016.csv\", index = False, header=True)"
+    "#income_2016.to_csv(\"MD_income_2016.csv\", index = False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "816daccf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -847,7 +837,6 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data_rates = censusdata.download('acs1', 2016,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
     "                                              )]),\n",
@@ -988,7 +977,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Baltimore, 2016</th>\n",
+       "      <th>Maryland, 2016</th>\n",
        "      <td>5875026</td>\n",
        "      <td>567715</td>\n",
        "      <td>4819956</td>\n",
@@ -1001,17 +990,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Persons for whom poverty status determined  \\\n",
-       "Baltimore, 2016                                     5875026   \n",
+       "                Persons for whom poverty status determined  \\\n",
+       "Maryland, 2016                                     5875026   \n",
        "\n",
-       "                 Individuals- income below poverty level  \\\n",
-       "Baltimore, 2016                                   567715   \n",
+       "                Individuals- income below poverty level  \\\n",
+       "Maryland, 2016                                   567715   \n",
        "\n",
-       "                 Population 16 years and over  In labor force  \\\n",
-       "Baltimore, 2016                       4819956         3277687   \n",
+       "                Population 16 years and over  In labor force  \\\n",
+       "Maryland, 2016                       4819956         3277687   \n",
        "\n",
-       "                 Employed civilians  Unemployed civilians  \n",
-       "Baltimore, 2016             3073923                175235  "
+       "                Employed civilians  Unemployed civilians  \n",
+       "Maryland, 2016             3073923                175235  "
       ]
      },
      "execution_count": 24,
@@ -1063,7 +1052,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>5875026</td>\n",
        "      <td>567715</td>\n",
        "      <td>4819956</td>\n",
@@ -1076,8 +1065,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             index  Persons for whom poverty status determined  \\\n",
-       "0  Baltimore, 2016                                     5875026   \n",
+       "            index  Persons for whom poverty status determined  \\\n",
+       "0  Maryland, 2016                                     5875026   \n",
        "\n",
        "   Individuals- income below poverty level  Population 16 years and over  \\\n",
        "0                                   567715                       4819956   \n",
@@ -1135,7 +1124,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>5875026</td>\n",
        "      <td>567715</td>\n",
        "      <td>4819956</td>\n",
@@ -1148,8 +1137,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year  Persons for whom poverty status determined  \\\n",
-       "0  Baltimore, 2016                                     5875026   \n",
+       "             Year  Persons for whom poverty status determined  \\\n",
+       "0  Maryland, 2016                                     5875026   \n",
        "\n",
        "   Individuals- income below poverty level  Population 16 years and over  \\\n",
        "0                                   567715                       4819956   \n",
@@ -1215,7 +1204,7 @@
        "      <td>3277687</td>\n",
        "      <td>3073923</td>\n",
        "      <td>175235</td>\n",
-       "      <td>Baltimore</td>\n",
+       "      <td>Maryland</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1228,8 +1217,8 @@
        "   Individuals- income below poverty level  Population 16 years and over  \\\n",
        "0                                   567715                       4819956   \n",
        "\n",
-       "   In labor force  Employed civilians  Unemployed civilians   Location  \n",
-       "0         3277687             3073923                175235  Baltimore  "
+       "   In labor force  Employed civilians  Unemployed civilians  Location  \n",
+       "0         3277687             3073923                175235  Maryland  "
       ]
      },
      "execution_count": 27,
@@ -1277,7 +1266,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1291,8 +1279,7 @@
        "      <td>3277687</td>\n",
        "      <td>3073923</td>\n",
        "      <td>175235</td>\n",
-       "      <td>Baltimore</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>Maryland</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1306,11 +1293,11 @@
        "   Individuals- income below poverty level  Population 16 years and over  \\\n",
        "0                                   567715                       4819956   \n",
        "\n",
-       "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
-       "0         3277687             3073923                175235  Baltimore   \n",
+       "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
+       "0         3277687             3073923                175235  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          10.0                4.0  "
+       "   Unemployment rate  \n",
+       "0                4.0  "
       ]
      },
      "execution_count": 28,
@@ -1319,12 +1306,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2016[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2016[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2016[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2016[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2016[\"Unemployed civilians\"].astype(\n",
@@ -1378,7 +1359,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1393,8 +1373,7 @@
        "      <td>3277687</td>\n",
        "      <td>3073923</td>\n",
        "      <td>175235</td>\n",
-       "      <td>Baltimore</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>Maryland</td>\n",
        "      <td>4.0</td>\n",
        "      <td>68.0</td>\n",
        "    </tr>\n",
@@ -1409,11 +1388,11 @@
        "   Individuals- income below poverty level  Population 16 years and over  \\\n",
        "0                                   567715                       4819956   \n",
        "\n",
-       "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
-       "0         3277687             3073923                175235  Baltimore   \n",
+       "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
+       "0         3277687             3073923                175235  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          10.0                4.0                      68.0  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                4.0                      68.0  "
       ]
      },
      "execution_count": 30,
@@ -1437,7 +1416,7 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#rates2016.to_csv(\"balt_employment_2016.csv\", index = False, header=True)"
+    "#rates2016.to_csv(\"MD_employment_2016.csv\", index = False, header=True)"
    ]
   }
  ],
