--- a/Build_economy2017.ipynb
+++ b/Build_economy2017.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2017 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2017 Census Data (ACS-1 year) for Selected Variables - Baltimore City"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -786,14 +785,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816daccf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1f650639",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1306,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1330,7 +1320,6 @@
        "      <td>284018</td>\n",
        "      <td>23261</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>22.0</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1347,8 +1336,8 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307585              284018                 23261  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          22.0                5.0  "
+       "   Unemployment rate  \n",
+       "0                5.0  "
       ]
      },
      "execution_count": 28,
@@ -1357,12 +1346,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2017[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2017[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2017[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2017[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2017[\"Unemployed civilians\"].astype(\n",
@@ -1416,7 +1399,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1432,7 +1414,6 @@
        "      <td>284018</td>\n",
        "      <td>23261</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>22.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>61.7</td>\n",
        "    </tr>\n",
@@ -1450,8 +1431,8 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307585              284018                 23261  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          22.0                5.0                      61.7  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                5.0                      61.7  "
       ]
      },
      "execution_count": 30,
