--- a/Build_economy2017_MD.ipynb
+++ b/Build_economy2017_MD.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "## Build an equitable economy: INCOME\n",
-    "### Baltimore City median income, Black median income, Black-white income gap\n",
+    "### MD median income, Black median income, Black-white income gap\n",
     "## 2017"
    ]
   },
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2017 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2017 Census Data (ACS-1 year) for Selected Variables - MARYLAND\n"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -198,10 +197,9 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data = censusdata.download('acs1', 2017,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
-    "                                                )]),\n",
+    "                                              )]),\n",
     "                                        [\"B19001_001E\",\"B01003_001E\",\n",
     "                                         \"B19013_001E\",\n",
     "                                         \"B02001_002E\", \"B02001_003E\",\n",
@@ -756,16 +754,8 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2017.to_csv(\"balt_income_2017.csv\", index = False, header=True)"
+    "#income_2017.to_csv(\"MD_income_2017.csv\", index = False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "816daccf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -847,13 +837,12 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data_rates = censusdata.download('acs1', 2017,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
     "                                              )]),\n",
-    "                                        [\"B17001_001E\",\"B17001_002E\",\"B23025_001E\",\"B23025_002E\",\n",
-    "                                         \"B23025_004E\",\"B23025_005E\"\n",
-    "                                        ])\n",
+    "                                            [\"B17001_001E\",\"B17001_002E\",\"B23025_001E\",\"B23025_002E\",\n",
+    "                                             \"B23025_004E\",\"B23025_005E\"\n",
+    "                                            ])\n",
     "rates_2017 = pd.DataFrame(data_rates)\n",
     "rates_2017"
    ]
@@ -1277,7 +1266,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1292,7 +1280,6 @@
        "      <td>3098182</td>\n",
        "      <td>170419</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1309,8 +1296,8 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3294443             3098182                170419  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0           9.0                4.0  "
+       "   Unemployment rate  \n",
+       "0                4.0  "
       ]
      },
      "execution_count": 28,
@@ -1319,12 +1306,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2017[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2017[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2017[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2017[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2017[\"Unemployed civilians\"].astype(\n",
@@ -1378,7 +1359,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1394,7 +1374,6 @@
        "      <td>3098182</td>\n",
        "      <td>170419</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>67.9</td>\n",
        "    </tr>\n",
@@ -1412,8 +1391,8 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3294443             3098182                170419  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0           9.0                4.0                      67.9  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                4.0                      67.9  "
       ]
      },
      "execution_count": 30,
