--- a/Build_economy2018.ipynb
+++ b/Build_economy2018.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2018 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2018 Census Data (ACS-1 year) for Selected Variables - Baltimore City"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -96,7 +95,7 @@
    "outputs": [],
    "source": [
     "# need to change the working directory; be sure that the config file for the census API is also in this folder\n",
-    "#os.chdir('C:\\\\Users\\\\Jenkir\\\\Desktop\\\\BDC\\\\Baltimore_Together\\\\measuring-success-metrics\\\\analysis_nbs')\n"
+    "#os.chdir('C:\\\\Users\\\\Jenkir\\\\Desktop\\\\BDC\\\\Baltimore_Together\\\\measuring-success-metrics\\\\analysis_nbs')"
    ]
   },
   {
@@ -210,15 +209,13 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data = censusdata.download('acs1', 2018,\n",
     "                          censusdata.censusgeo([('state', '24'),\n",
     "                                         ('county', '510')]),\n",
     "                                        [\"B19001_001E\",\"B01003_001E\",\n",
     "                                         \"B19013_001E\",\n",
     "                                         \"B02001_002E\", \"B02001_003E\",\n",
-    "                                         \"B19013A_001E\", \"B19013B_001E\"])\n",
-    "                          \n",
+    "                                         \"B19013A_001E\", \"B19013B_001E\"])                          \n",
     "census_2018 = pd.DataFrame(data)\n",
     "census_2018"
    ]
@@ -786,14 +783,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "816daccf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "74c0a23f",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1304,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1330,7 +1318,6 @@
        "      <td>286050</td>\n",
        "      <td>20745</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>18.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1347,8 +1334,8 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307604              286050                 20745  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          18.0                4.0  "
+       "   Unemployment rate  \n",
+       "0                4.0  "
       ]
      },
      "execution_count": 28,
@@ -1357,12 +1344,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2018[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2018[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2018[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2018[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2018[\"Unemployed civilians\"].astype(\n",
@@ -1373,17 +1354,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bee1365f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#rates2018[\"Poverty rate\"] = rates2018[\"Poverty rate\"].astype(float).round(1)\n",
-    "#rates2018[\"Unemployment rate\"] = rates2018[\"Unemployment rate\"].astype(float).round(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
    "id": "4e691a88",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1386,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1432,7 +1401,6 @@
        "      <td>286050</td>\n",
        "      <td>20745</td>\n",
        "      <td>Baltimore</td>\n",
-       "      <td>18.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>62.5</td>\n",
        "    </tr>\n",
@@ -1450,11 +1418,11 @@
        "   In labor force  Employed civilians  Unemployed civilians   Location  \\\n",
        "0          307604              286050                 20745  Baltimore   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          18.0                4.0                      62.5  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                4.0                      62.5  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "0fa6ff14",
    "metadata": {},
    "outputs": [],
