--- a/Build_economy2021_MD.ipynb
+++ b/Build_economy2021_MD.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "## Build an equitable economy: INCOME\n",
-    "### Baltimore City median income, Black median income, Black-white income gap\n",
+    "### MD median income, Black median income, Black-white income gap\n",
     "## 2021"
    ]
   },
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2021 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2021 Census Data (ACS-1 year) for Selected Variables - MARYLAND"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install censusdata\n"
+    "#pip install censusdata"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -198,7 +197,6 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data = censusdata.download('acs1', 2021,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
     "                                                )]),\n",
@@ -756,16 +754,8 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2021.to_csv(\"balt_income_2021.csv\", index = False, header=True)"
+    "#income_2021.to_csv(\"MD_income_2021.csv\", index = False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "816daccf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -847,7 +837,6 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data_rates = censusdata.download('acs1', 2021,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
     "                                              )]),\n",
@@ -1277,7 +1266,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1292,7 +1280,6 @@
        "      <td>3070750</td>\n",
        "      <td>192275</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1309,8 +1296,8 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3304168             3070750                192275  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          10.0                4.0  "
+       "   Unemployment rate  \n",
+       "0                4.0  "
       ]
      },
      "execution_count": 28,
@@ -1319,12 +1306,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2021[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2021[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2021[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2021[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2021[\"Unemployed civilians\"].astype(\n",
@@ -1335,17 +1316,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fee17794",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#rates2021[\"Poverty rate\"] = rates2021[\"Poverty rate\"].astype(float).round(1)\n",
-    "#rates2021[\"Unemployment rate\"] = rates2021[\"Unemployment rate\"].astype(float).round(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
    "id": "e1e3ad8e",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1348,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1394,7 +1363,6 @@
        "      <td>3070750</td>\n",
        "      <td>192275</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>66.6</td>\n",
        "    </tr>\n",
@@ -1412,11 +1380,11 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3304168             3070750                192275  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          10.0                4.0                      66.6  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                4.0                      66.6  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,13 +1399,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "88cf9645",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#rates2021.to_csv(\"balt_employment_2021.csv\", index = False, header=True)"
+    "#rates2021.to_csv(\"MD_employment_2021.csv\", index = False, header=True)"
    ]
   }
  ],
