--- a/Build_economy2014_MD.ipynb
+++ b/Build_economy2014_MD.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "## Build an equitable economy: INCOME\n",
-    "### Baltimore City median income, Black median income, Black-white income gap\n",
+    "### MD median income, Black median income, Black-white income gap\n",
     "## 2014"
    ]
   },
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data source: 2014 Census Data (ACS-1 year) for Selected Variables - Baltimore City\n"
+    "# data source: 2014 Census Data (ACS-1 year) for Selected Variables - Maryland\n"
    ]
   },
   {
@@ -50,7 +50,6 @@
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
@@ -777,14 +776,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a707c01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "86efed95",
    "metadata": {},
@@ -847,7 +838,6 @@
    ],
    "source": [
     "# American Community Survey 1-Year Data \n",
-    "\n",
     "data_rates = censusdata.download('acs1', 2014,\n",
     "                          censusdata.censusgeo([('state', '24'\n",
     "                                              )]),\n",
@@ -1277,7 +1267,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1292,7 +1281,6 @@
        "      <td>2994301</td>\n",
        "      <td>231268</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1309,8 +1297,8 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3249757             2994301                231268  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  \n",
-       "0          10.0                5.0  "
+       "   Unemployment rate  \n",
+       "0                5.0  "
       ]
      },
      "execution_count": 28,
@@ -1319,12 +1307,6 @@
     }
    ],
    "source": [
-    "# Add a new column for poverty rate \n",
-    "rates2014[\"Poverty rate\"] = (100 * \\\n",
-    "    rates2014[\"Individuals- income below poverty level\"].astype(\n",
-    "        int) / rates2014[\"Persons for whom poverty status determined\"].astype(int)).round()\n",
-    "\n",
-    "\n",
     "# Add a new column for unemployment rate \n",
     "rates2014[\"Unemployment rate\"] = (100 * \\\n",
     "    rates2014[\"Unemployed civilians\"].astype(\n",
@@ -1378,7 +1360,6 @@
        "      <th>Employed civilians</th>\n",
        "      <th>Unemployed civilians</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Poverty rate</th>\n",
        "      <th>Unemployment rate</th>\n",
        "      <th>Labor participation rate</th>\n",
        "    </tr>\n",
@@ -1394,7 +1375,6 @@
        "      <td>2994301</td>\n",
        "      <td>231268</td>\n",
        "      <td>Maryland</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>68.1</td>\n",
        "    </tr>\n",
@@ -1412,8 +1392,8 @@
        "   In labor force  Employed civilians  Unemployed civilians  Location  \\\n",
        "0         3249757             2994301                231268  Maryland   \n",
        "\n",
-       "   Poverty rate  Unemployment rate  Labor participation rate  \n",
-       "0          10.0                5.0                      68.1  "
+       "   Unemployment rate  Labor participation rate  \n",
+       "0                5.0                      68.1  "
       ]
      },
      "execution_count": 30,
@@ -1437,7 +1417,7 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#rates2014.to_csv(\"balt_employment_2014.csv\", index = False, header=True)"
+    "#rates2014.to_csv(\"MD_employment_2014.csv\", index = False, header=True)"
    ]
   }
  ],
